<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeocachingSolutions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_id">Enter ID:</string>
    <string name="search">Search</string>
    <string name="add_solution">Add solution</string>
    <string name="add_photo">Add photo</string>
    <string name="add_location">Add location</string>
    <string name="add_audio">Add audio</string>
    <string name="post">Post Solution!</string>
    <string name="new_solution">New Solution</string>
    <string name="title_activity_new_solution">NewSolution</string>
    <string name="title_activity_solution">Solution</string>
    <string name="title_activity_pref">PrefActivity</string>

</resources>
